# Infinite-Tower

./: .gitignore  BUILD_GUIDE.md  DEPLOYMENT.md  ENABLE_GITHUB_PAGES.md  ENABLE_PAGES_NOW.md  GAME_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  INVENTORY_UPDATE.md  PLATFORM_SETUP_COMPLETE.md  README.md  TODO.md  TODO_OLD.md  WEB_DEPLOY_GUIDE.md  build_desktop.py  build_web.py  index.html  requirements-desktop.txt  requirements-web.txt  test_sprint.py  test_sprint_direct.py
docs/: README.md  index.html
infinite-tower-engine/: LICENSE  README.md  demo_16bit_ui.py  demo_systems.py  main.py  pyproject.toml  requirements.txt  run_desktop_game.py
infinite-tower-engine/assets/: fonts
infinite-tower-engine/docs/: design.md  gameplay.md
infinite-tower-engine/src/infinite_tower/: __init__.py  config.py  game.py  main.py
infinite-tower-engine/src/infinite_tower/engine/: loop.py  scene.py  scheduler.py
infinite-tower-engine/src/infinite_tower/entities/: enemy.py  player.py  wall.py
infinite-tower-engine/src/infinite_tower/floors/: generator.py
infinite-tower-engine/src/infinite_tower/items/: loot.py
infinite-tower-engine/src/infinite_tower/resources/: loader.py
infinite-tower-engine/src/infinite_tower/systems/: ai.py  combat.py  physics.py
infinite-tower-engine/src/infinite_tower/ui/: __init__.py  game_ui.py  hud.py  inventory.py
infinite-tower-engine/src/infinite_tower/utils/: __init__.py  input_handler.py  timer.py
infinite-tower-engine/src/scripts/: seed_data.py
infinite-tower-engine/tests/: test_game.py  test_generator.py
my-pygame-game/: README.md  (+1 more)
(+12 files in other folders)
