[tool]
name = "infinite-tower-engine"
version = "0.1.0"
description = "A Pygame-based action looter game with infinite floors."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"