[project]
name = "infinite-tower-engine"
version = "0.1.0"
description = "A Pygame-based action looter game with infinite floors."
authors = [{name = "CosmicPhoenix171"}]
license = {text = "Proprietary"}
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.1.3",
    "numpy>=1.23.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pygame-menu>=4.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["infinite_tower"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]